--- a/index.html
+++ b/index.html
@@ -1908,7 +1908,7 @@
                 >
                   <div class="col-lg-12 mt-3">
                     <a href="" class="button-view-all">
-                      View All
+                      Views All
                     </a>
                   </div>
                 </div>
