--- a/solution.html
+++ b/solution.html
@@ -575,12 +575,12 @@
                 <div class="row">
                   <h3 class="title-sub">FURNITURE</h3>
                   <div class="col-lg-6 mt-4" style="padding-left: 30px;">
-                    <a href="" class="solution-item row" style="background-image: url('images/solution/canh-shaker-03.jpg');">
+                    <a href="solution-detail.html" class="solution-item row" style="background-image: url('images/solution/canh-shaker-03.jpg');">
                       <h3>MONOTONE SOLUTION FOR FLOORING, BLINDS, DOORS, CEILINGS, AND INTERIORS</h3>
                     </a>
                   </div>
                   <div class="col-lg-6 mt-4" style="padding-left: 30px;">
-                    <a href="" class="solution-item row" style="background-image: url('images/solution/van-vuot-kho-03-03.jpg');">
+                    <a href="solution-detail.html" class="solution-item row" style="background-image: url('images/solution/van-vuot-kho-03-03.jpg');">
                       <h3>LONG PANEL - NEW SOLUTION FOR DRAMATIC CEILING DESIGNS.</h3>
                     </a>
                   </div>
@@ -627,123 +627,24 @@
       <footer class="site-footer" id="footer">
         <div class="footer-top">
           <div class="container">
-            <div class="row">
-              <div
-                class="col-md-4 wow fadeInLeft"
-                data-wow-duration="2s"
-                data-wow-delay="0.3s"
-              >
-                <div class="widget widget_about">
-                  <div class="footer-logo">
-                    <a href="index.html"
-                      ><img src="images/logo-white.png" alt=""
-                    /></a>
-                  </div>
-                  <p>
-                    Surround yourself with fresh energy, high-tech amenities,
-                    and elevated style. Indulge in extraordinary amenities,
-                    relax in appealing social spaces.
-                  </p>
-                  <div class="dlab-social-icon">
-                    <ul>
-                      <li>
-                        <a
-                          class="fa fa-facebook"
-                          href="javascript:void(0);"
-                        ></a>
-                      </li>
-                      <li>
-                        <a class="fa fa-twitter" href="javascript:void(0);"></a>
-                      </li>
-                      <li>
-                        <a
-                          class="fa fa-linkedin"
-                          href="javascript:void(0);"
-                        ></a>
-                      </li>
-                      <li>
-                        <a
-                          class="fa fa-instagram"
-                          href="javascript:void(0);"
-                        ></a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
+            <div class="row justify-content-center">
+              <div class="logo-company col-lg-3">
+                <a href=""><img src="images/logo/Logo JX_Logo JX.png" alt=""></a>
               </div>
-              <div
-                class="col-md-4 wow fadeInLeft"
-                data-wow-duration="2s"
-                data-wow-delay="0.6s"
-              >
-                <div class="widget">
-                  <h5 class="footer-title">Contact Us</h5>
-                  <ul class="contact-info-bx">
-                    <li>
-                      <i class="las la-map-marker"></i
-                      ><strong>Address</strong> 1st Floor, 123 West Street,
-                      Melbourne Victoria 3000 Australia
-                    </li>
-                    <li>
-                      <i class="las la-phone-volume"></i
-                      ><strong>Call :-</strong> 0800-123456
-                    </li>
-                    <li>
-                      <i class="las la-phone-square-alt"></i
-                      ><strong>Board line :-</strong> 0123-4567890
-                    </li>
-                  </ul>
-                </div>
+              <div class="social-icon col-lg-4">
+                <ul class="link-social">
+                    <li><a href=""><img src="images/logo/facebook (1).png" alt=""></a></li>
+                    <li><a href=""><img src="images/logo/instagram.png" alt=""></a></li>
+                    <li><a href=""><img src="images/logo/linkedin (1).png" alt=""></a></li>
+                    <li><a href=""><img src="images/logo/youtube (1).png" alt=""></a></li>
+                    <li><a href=""><img src="images/logo/pinterest.png" alt=""></a></li>
+                </ul>
               </div>
-              <div
-                class="col-md-4 wow fadeInLeft"
-                data-wow-duration="2s"
-                data-wow-delay="0.9s"
-              >
-                <div class="widget widget-logo">
-                  <h5 class="footer-title">Our Business Channels</h5>
-                  <ul>
-                    <li>
-                      <a href="javascript:void(0);"
-                        ><img src="images/logo/logo1.png" alt=""
-                      /></a>
-                    </li>
-                    <li>
-                      <a href="javascript:void(0);"
-                        ><img src="images/logo/logo2.png" alt=""
-                      /></a>
-                    </li>
-                    <li>
-                      <a href="javascript:void(0);"
-                        ><img src="images/logo/logo3.png" alt=""
-                      /></a>
-                    </li>
-                    <li>
-                      <a href="javascript:void(0);"
-                        ><img src="images/logo/logo4.png" alt=""
-                      /></a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- footer bottom part -->
-        <div class="footer-bottom">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-6 col-sm-12 text-md-left text-center">
-                <span>© 2022 DexignZone. All Right Reserved</span>
-              </div>
-              <div class="col-md-6 col-sm-12 text-md-right text-center">
-                <div class="widget-link">
-                  <ul>
-                    <li><a href="about-us-1.html"> About</a></li>
-                    <li><a href="contact-us-1.html"> Contact Us</a></li>
-                    <li><a href="privacy-policy.html"> Privacy Policy</a></li>
-                  </ul>
-                </div>
+              <div class="copyright col-lg-3">
+                <span>
+                  <h3>© 2024 <strong>An Cuong wood working materials.</strong></h3>
+                  <h3>All Rights Reserved.<a href="">Developed By Camgotech</a></h3>
+                </span>
               </div>
             </div>
           </div>
