--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
                       <a href="javascript:void(0);">SHOWROOM</a>
                     </li>
                     <li>
-                      <a href="javascript:void(0);">YOUTUBE</a>
+                      <a href="youtube.html">YOUTUBE</a>
                     </li>
                     <li>
-                      <a href="javascript:void(0);">NEWS</a>
+                      <a href="news.html">NEWS</a>
                     </li>
                   </ul>
                 </div>
