--- a/showroom.html
+++ b/showroom.html
@@ -49,12 +49,12 @@
             <div class="row d-flex justify-content-between align-items-center">
               <div class="col-2">
                 <a href="index.html"
-                  ><img src="images/logo/NY Group.png" alt="" width="100%"
+                  ><img src="images/logo-ny.jpg" alt="" width="100%"
                 /></a>
               </div>
               <div class="col-2">
                 <a href="index.html"
-                  ><img src="images/logo/Logo JX_Logo JX.png" alt="" width="100%"
+                  ><img src="images/logo-jx.jpg" alt="" width="100%"
                 /></a>
               </div>
             </div>
@@ -89,7 +89,7 @@
               >
                 <div class="logo-header d-md-block d-lg-none">
                   <a href="index.html"
-                    ><img src="images/logo/Logo JX_Logo JX.png" alt=""
+                    ><img src="images/logo-jx.jpg" alt=""
                   /></a>
                 </div>
                 <div class="col-8">
@@ -135,13 +135,13 @@
                       <a href="javascript:void(0);">PROJECTS</a>
                     </li>
                     <li>
-                      <a href="javascript:void(0);">SHOWROOM</a>
+                      <a href="showroom.html">SHOWROOM</a>
                     </li>
                     <li>
-                      <a href="javascript:void(0);">YOUTUBE</a>
+                      <a href="youtube.html">YOUTUBE</a>
                     </li>
                     <li>
-                      <a href="javascript:void(0);">NEWS</a>
+                      <a href="news.html">NEWS</a>
                     </li>
                   </ul>
                 </div>
@@ -495,28 +495,28 @@
           <!-- END REVOLUTION SLIDER -->
         </div>
         <!-- Main Slider -->
-        <div id="side-category">
+        <div class="side-category">
           <div class="container">
             <div class="sidenav-cate">
               <ul class="navbar">
                 <li>
                   <a class="scroll nav-link" href="#company"
-                    >FURNITURE</a
+                    >SHOWROOMS</a
                   >
                 </li>
                 <li>
                   <a class="scroll nav-link" href="#introduction"
-                    >EXTERIOR</a
+                    >FRANCHISE</a
                   >
                 </li>
                 <li>
                   <a class="scroll nav-link" href="#chart"
-                    >NEW MATERIAL</a
+                    >DISTRIBUTION SYSTEM AND AGENCIES</a
                   >
                 </li>
                 <li>
                   <a class="scroll nav-link" href="#partners"
-                    >TREND</a
+                    >VR 360</a
                   >
                 </li>
               </ul>
@@ -526,120 +526,29 @@
         
         <div class="master-plan">
         
-            <div class="solution-detail-title-container pb-5 pt-5">
+            <div class="solution-item-container pb-5">
               <div class="container">
-                <h3 class="title-sub">SETTING THE TREND OF MODERN CLASSIC STYLE WITH MICRO SHAKER BY AN CUONG</h3>
-              </div>
-            </div>
-            <div class="solution-detail-container pb-5 pt-4">
-              <div class="container">
-                <div class="solution-detail row">
-                    <p>
-                        Shaker kitchen cabinets are a popular trend in modern kitchens due to their timeless yet contemporary design that exudes elegance and suits any kitchen style, from traditional to contemporary.
-                    </p>
-                    <p>
-                        Shaker cabinets are known for their simple, tidy, and practical design. The hallmark of this style includes flat cabinet doors with equally framed edges. When combined with solid-colored Lacquered Laminate material, it creates beautiful and modern products with a smooth, matte effect.
-                    </p>
-                    <p>
-                        An Cuong is currently expanding its service of manufacturing Shaker cabinet doors with two designs:
-                    </p>
-                    <p>
-                        Basic Shaker Door: featuring a frame and core made of Lacquered Laminate material
-                    </p>
-                    <p>
-                        <img src="images/solution/1.jpg" alt="">
-                    </p>
-                    <p>
-                        <img src="images/solution/2.jpg" alt="">
-                    </p>
-                    <p>
-                        <img src="images/solution/3.jpg" alt="">
-                    </p>
-                    <div class="img-solution col-lg-6">
-                        <img src="images/solution/1 (1).jpg" alt="">
-                    </div>
-                    <div class="img-solution col-lg-6">
-                        <img src="images/solution/2 (1).jpg" alt="">
-                    </div>
-                    <p>
-                        <img src="images/solution/2 (2).jpg" alt="">
-                    </p>
-                    <p>
-                        <img src="images/solution/3 (1).jpg" alt="">
-                    </p>
-                </div>
-              </div>
-            </div>
-            <div class="print-container">
-                <div class="print-box">
-                    <a href="" class="print-text"><i class="fa fa-star" aria-hidden="true"></i>bookmark</a>
-                    <a href="" class="print-text"><i class="fa fa-print" aria-hidden="true"></i>print</a>
-                    <a href="" class="print-text share-print"><i class="fa fa-share-square-o" aria-hidden="true"></i>share</a>
-                    <ul class="link-share">
-                        <li><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                        <li><a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="related-solution-container pb-2 pt-2">
-              <div class="container">
-                <h3 class="title-sub">Related news</h3>
-                <div class="team-carousel owl-carousel owl-theme owl-btn-1 m-b30 owl-btn-center-lr">
-                  <div class="item-related">
-                    <div class="team-box style1 text-center wow fadeInUp" data-wow-delay="0.2s">
-                      <div class="related-media"> 
-                        <a href="solution-detail.html" class="row">
-                          <div class="related-pic col-6">
-                            <img src="images/solution/van-vuot-kho-03-03.jpg" alt="">
-                          </div>
-                          <div class="solution-relate-title col-6">
-                            <h4 class="relate-title">SETTING THE TREND OF MODERN CLASSIC STYLE WITH MICRO SHAKER BY AN CUONG</h4>
-                          </div>
-                        </a>
-                      </div>
-                    </div>
+                <div class="row">
+                  <h3 class="title-sub">FURNITURE</h3>
+                  <div class="col-lg-6 mt-4" style="padding-left: 30px;">
+                    <a href="solution-detail.html" class="solution-item row" style="background-image: url('images/solution/canh-shaker-03.jpg');">
+                      <h3>MONOTONE SOLUTION FOR FLOORING, BLINDS, DOORS, CEILINGS, AND INTERIORS</h3>
+                    </a>
                   </div>
-                  <div class="item-related">
-                    <div class="team-box style1 text-center wow fadeInUp" data-wow-delay="0.2s">
-                      <div class="related-media"> 
-                        <a href="solution-detail.html" class="row">
-                          <div class="related-pic col-6">
-                            <img src="images/solution/canh-shaker-03.jpg" alt="">
-                          </div>
-                          <div class="solution-relate-title col-6">
-                            <h4 class="relate-title">SETTING THE TREND OF MODERN CLASSIC STYLE WITH MICRO SHAKER BY AN CUONG</h4>
-                          </div>
-                        </a>
-                      </div>
-                    </div>
+                  <div class="col-lg-6 mt-4" style="padding-left: 30px;">
+                    <a href="solution-detail.html" class="solution-item row" style="background-image: url('images/solution/van-vuot-kho-03-03.jpg');">
+                      <h3>LONG PANEL - NEW SOLUTION FOR DRAMATIC CEILING DESIGNS.</h3>
+                    </a>
                   </div>
-                  <div class="item-related">
-                    <div class="team-box style1 text-center wow fadeInUp" data-wow-delay="0.2s">
-                      <div class="related-media"> 
-                        <a href="solution-detail.html" class="row">
-                          <div class="related-pic col-6">
-                            <img src="images/solution/van-vuot-kho-03-03.jpg" alt="">
-                          </div>
-                          <div class="solution-relate-title col-6">
-                            <h4 class="relate-title">SETTING THE TREND OF MODERN CLASSIC STYLE WITH MICRO SHAKER BY AN CUONG</h4>
-                          </div>
-                        </a>
-                      </div>
-                    </div>
+                  <div class="col-lg-6 mt-4" style="padding-left: 30px;">
+                    <a href="" class="solution-item row" style="background-image: url('images/solution/canh-shaker-03.jpg');">
+                      <h3>MONOTONE SOLUTION FOR FLOORING, BLINDS, DOORS, CEILINGS, AND INTERIORS</h3>
+                    </a>
                   </div>
-                  <div class="item-related">
-                    <div class="team-box style1 text-center wow fadeInUp" data-wow-delay="0.2s">
-                      <div class="related-media"> 
-                        <a href="solution-detail.html" class="row">
-                          <div class="related-pic col-6">
-                            <img src="images/solution/canh-shaker-03.jpg" alt="">
-                          </div>
-                          <div class="solution-relate-title col-6">
-                            <h4 class="relate-title">SETTING THE TREND OF MODERN CLASSIC STYLE WITH MICRO SHAKER BY AN CUONG</h4>
-                          </div>
-                        </a>
-                      </div>
-                    </div>
+                  <div class="col-lg-6 mt-4" style="padding-left: 30px;">
+                    <a href="" class="solution-item row" style="background-image: url('images/solution/van-vuot-kho-03-03.jpg');">
+                      <h3>MONOTONE SOLUTION FOR FLOORING, BLINDS, DOORS, CEILINGS, AND INTERIORS</h3>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -747,18 +656,6 @@
     <script src="vendor/revolution/revolution/js/extensions/revolution.extension.video.min.js"></script>
     <script src="js/rev.slider.js"></script>
     <script>
-      window.onscroll = function() {menuFunction()};
-
-      var navbar = document.getElementById("side-category");
-      var sticky = navbar.offsetTop;
-
-      function menuFunction() {
-        if (window.pageYOffset >= sticky) {
-          navbar.classList.add("sticky")
-        } else {
-          navbar.classList.remove("sticky");
-        }
-      }
       jQuery(document).ready(function () {
         "use strict";
         dz_rev_slider_1();
