--- a/solution.html
+++ b/solution.html
@@ -135,13 +135,13 @@
                       <a href="javascript:void(0);">PROJECTS</a>
                     </li>
                     <li>
-                      <a href="javascript:void(0);">SHOWROOM</a>
+                      <a href="showroom.html">SHOWROOM</a>
                     </li>
                     <li>
-                      <a href="javascript:void(0);">YOUTUBE</a>
+                      <a href="youtube.html">YOUTUBE</a>
                     </li>
                     <li>
-                      <a href="javascript:void(0);">NEWS</a>
+                      <a href="news.html">NEWS</a>
                     </li>
                   </ul>
                 </div>
@@ -220,50 +220,6 @@
         <!-- main header END -->
       </header>
       <!-- header END -->
-      <div class="sidenav-list">
-        <ul class="navbar">
-          <li>
-            <a class="scroll nav-link" href="#home"
-              ><i class="las la-home"></i> <span>Home</span></a
-            >
-          </li>
-          <li>
-            <a class="scroll nav-link" href="#specifications"
-              ><i class="las la-file-alt"></i> <span>specifications</span></a
-            >
-          </li>
-          <li>
-            <a class="scroll nav-link" href="#aboutUs"
-              ><i class="las la-user"></i> <span>ABOUT US</span></a
-            >
-          </li>
-          <li>
-            <a class="scroll nav-link" href="#masterPlan"
-              ><i class="las la-chart-bar"></i> <span>MASTER PLAN</span></a
-            >
-          </li>
-          <li>
-            <a class="scroll nav-link" href="#mainGallery"
-              ><i class="las la-image"></i> <span>Gallery</span></a
-            >
-          </li>
-          <li>
-            <a class="scroll nav-link" href="#ourServices"
-              ><i class="las la-cog"></i> <span>Our Services</span></a
-            >
-          </li>
-          <li>
-            <a class="scroll nav-link" href="#newsEvent"
-              ><i class="las la-rss"></i> <span>News Event</span></a
-            >
-          </li>
-          <li>
-            <a class="scroll nav-link" href="#footer"
-              ><i class="las la-phone-volume"></i> <span>Contact Us</span></a
-            >
-          </li>
-        </ul>
-      </div>
       <div class="page-content bg-white">
         <!-- Main Slider -->
         <div class="rev-slider" id="home">
